<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".FormularioActivity"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_nome_completo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nome_completo"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText_nome_completo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            tools:ignore="LabelFor,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/txt_telefone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telefone"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText_telefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="number"
            android:minHeight="48dp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/txt_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/e_mail"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            tools:ignore="TextFields,SpeakableTextPresentCheck" />

        <CheckBox
            android:id="@+id/comboBox_list_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ingressar"/>

        <TextView
            android:id="@+id/txt_sexo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sexo"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/radio_masc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/masculino"
                android:checked="true"/>
            <RadioButton
                android:id="@+id/radio_femin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/feminino"/>
        </RadioGroup>

        <TextView
            android:id="@+id/txt_cidade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cidade"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText_cidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            tools:ignore="TextFields,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/txt_uf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uf"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/opcoes_uf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/opcoes_uf"
            android:minHeight="48dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/button_save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/salvar"
                android:layout_weight="1"
                android:layout_marginHorizontal="5dp"
                style="?android:attr/buttonBarStyle" />

            <Button
                android:id="@+id/button_clean"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/limpar"
                android:layout_marginHorizontal="5dp"
                style="?android:attr/buttonBarStyle" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>